fluxo cancelamento e reagendamento